adicionei a versão do site

--- a/cap1.html
+++ b/cap1.html
@@ -32,7 +32,11 @@
     <p>A tristeza é uma emoção que faz parte da experiência humana, uma resposta natural às perdas, decepções ou momentos difíceis. Ela pode surgir de forma súbita ou se prolongar, dependendo das circunstâncias. Embora desconfortável, a tristeza tem um papel importante, pois nos permite refletir sobre o que é importante, nos conecta à nossa vulnerabilidade e nos ajuda a processar experiências dolorosas. Mesmo sendo uma emoção que muitos tentam evitar, ela também pode ser um caminho para o crescimento pessoal e a compreensão mais profunda de nós mesmos e do mundo ao nosso redor.</p>
     <h3 class="emoçoes">raiva</h3>
     <p>A raiva é uma emoção intensa que surge como resposta a situações de frustração, injustiça ou ameaça. Embora muitas vezes seja vista de forma negativa, ela tem uma função adaptativa, ajudando a proteger-nos e a reagir diante de perigos. No entanto, quando não controlada, a raiva pode levar a decisões impulsivas e prejudicar relações. Aprender a reconhecê-la e a canalizá-la de maneira saudável é essencial para evitar que ela nos domine. Em sua forma equilibrada, a raiva pode se transformar em motivação para mudar o que nos incomoda, mas sempre exige autoconsciência e controle.
-    </p>
+    </p><br><br>
+    <p style="text-align: center;">por enquano terá só isso</p>
+    
+    <p style="color: darkgray;">v.1</p>
+
           </div>
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
