fiz algumas alterações

--- a/cap1.html
+++ b/cap1.html
@@ -34,7 +34,21 @@
     <p>A raiva é uma emoção intensa que surge como resposta a situações de frustração, injustiça ou ameaça. Embora muitas vezes seja vista de forma negativa, ela tem uma função adaptativa, ajudando a proteger-nos e a reagir diante de perigos. No entanto, quando não controlada, a raiva pode levar a decisões impulsivas e prejudicar relações. Aprender a reconhecê-la e a canalizá-la de maneira saudável é essencial para evitar que ela nos domine. Em sua forma equilibrada, a raiva pode se transformar em motivação para mudar o que nos incomoda, mas sempre exige autoconsciência e controle.
     </p><br><br>
     <p style="text-align: center;">por enquano terá só isso</p>
-    
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            <li class="page-item">
+                <a class="page-link" href="#">anterior</a>
+              </li>
+          <li class="page-item active" aria-current="page">
+            <span class="page-link">1</span>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#">proximo</a>
+          </li>
+        </ul>
+      </nav>
     <p style="color: darkgray;">v.1</p>
 
           </div>
