--- a/index.html
+++ b/index.html
@@ -23,20 +23,30 @@
 
 
 <a  style="color:darkgray" href="cap1.html">cap 1: emoções primarias</a><br><br>
-<a  href="#"> cap2 em densenvolvimento</a><br><br>
-<a  href="#"> cap3 em densenvolvimento</a><br><br>
-<a href="#"> cap4 em densenvolvimento</a><br><br>
-<a href="#"> cap5 em densenvolvimento</a><br><br>
-<a  href="#"> cap6 em densenvolvimento</a><br><br>
 
 
 
 
 
 
- <p>este site é para informações sobre as emoções entao poder continuar</p>
+ <p>este site é para informações sobre as emoções ainda em desenvolvimento</p>
  <footer style="font-size: 15px;text-align: center;color: gray;">~todos os direitos reservados~</footer>
-    </div>
+ <nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    <li class="page-item disabled">
+      <a class="page-link">anterior</a>
+    </li>
+    <li class="page-item"><a class="page-link" href="cap1.html">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#">proximo</a>
+    </li>
+  </ul>
+</nav>
+<p>por enquanto não haverá a cont</p>
+</div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
