corrigir algumas falhas

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
  <p>este site é para informações sobre as emoções ainda em desenvolvimento</p>
- <footer style="font-size: 15px;text-align: center;color: gray;">~todos os direitos reservados~</footer>
+ <footer style="font-size: 15px;text-align: center;color: gray;">~todos os direitos reservados~</footer><br><p>espere desenvolver a pagina 1 e 3</p>
  <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
     <li class="page-item disabled">
@@ -40,11 +40,11 @@
     <li class="page-item"><a class="page-link" href="#">2</a></li>
     <li class="page-item"><a class="page-link" href="#">3</a></li>
     <li class="page-item">
-      <a class="page-link" href="#">proximo</a>
+      <a class="page-link" href="cap1.html">proximo</a>
     </li>
   </ul>
 </nav>
-<p>por enquanto não haverá a cont</p>
+<p>por enquanto não haverá a continuação</p>
 </div>
 
     <script
