mudei uma palavra

--- a/cap1.html
+++ b/cap1.html
@@ -23,7 +23,7 @@
         <nav><a  class="link" href="/"><p class="logo">emoções <img class="imagem"  src="Texto do seu parágrafo.ico"></p></a></nav>
         <div class="container">
 <h1>capitulo 1:</h1>
-<h4>~emoções primitivas</h4>
+<h4>~emoções simples</h4>
 <br>
 <h3 class="emoçoes">felicidade</h3>
 <p>
