corrigir algumas coisas

--- a/cap1.html
+++ b/cap1.html
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-        <nav><a  class="link" href="/"><p class="logo">emoções <img class="imagem"  src="Texto do seu parágrafo.ico"></p></a></nav>
+        <nav><a  class="link" href="index.html"><p class="logo">emoções <img class="imagem"  src="Texto do seu parágrafo.ico"></p></a></nav>
         <div class="container">
 <h1>capitulo 1:</h1>
 <h4>~emoções simples</h4>
@@ -37,7 +37,7 @@
     <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-center">
             <li class="page-item">
-                <a class="page-link" href="#">anterior</a>
+                <a class="page-link" href="index.html">anterior</a>
               </li>
           <li class="page-item active" aria-current="page">
             <span class="page-link">1</span>
