--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <title>dicionario de emoções</title>
-    <link  rel="shortcut icon" href="Texto do seu parágrafo.ico" type="image/x-icon">
+    <link  rel="shortcut icon" href="E.ico" type="image/x-icon">
     <meta charset="utf-8">
     <meta
       name="viewport"
