--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
 
  <p>este site é para informações sobre as emoções ainda em desenvolvimento</p>
- <footer style="font-size: 15px;text-align: center;color: gray;">~todos os direitos reservados~</footer><br><p>espere desenvolver a pagina 2 e 3</p>
+ <br><p style="color: darkgray;text-align: center;">espere desenvolver a pagina 2 e 3</p>
  <nav aria-label="Page navigation example">
-  <ul class="pagination justify-content-center">
-    <li class="page-item disabled">
+   <ul class="pagination justify-content-center">
+     <li class="page-item disabled">
       <a class="page-link">anterior</a>
     </li>
     <li class="page-item"><a class="page-link" href="cap1.html">1</a></li>
@@ -44,7 +44,6 @@
     </li>
   </ul>
 </nav>
-<p>por enquanto não haverá a continuação</p>
 </div>
 
     <script
