--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
     </li>
   </ul>
 </nav>
-<br><br><h3 class="centro">terá 4 capitulos:</h3><br><br>
-<h4 class="centro">cap 1: emoções simples</h4>
-<h4 class="centro">emoções complexas</h4>
-<h5 class="centro">doenças emocionais</h5>
-<h4 class="centro">emoções de traumas</h4><br>
+<br><br><h3 class="centro">terá 3 capitulos:</h3><br><br>
+<h4 class="centro" style="color: darkcyan;">cap 1 : emoções simples</h4>
+<h4 class="centro" style="color: purple;">cap 2 : emoções complexas</h4>
+<h4 class="centro"> cap 4 : traumas</h4><br>
 <h3>todos esse capitulos ainda estão em desenvolvimento</h3>
 </div>
 
