--- a/cap1.html
+++ b/cap1.html
@@ -42,7 +42,7 @@
           <li class="page-item active" aria-current="page">
             <span class="page-link">1</span>
           </li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="pagina2.html">2</a></li>
           <li class="page-item"><a class="page-link" href="#">3</a></li>
           <li class="page-item">
             <a class="page-link" href="#">proximo</a>
