adicionei na pagina 2 o medo e o orgulho

--- a/index.html
+++ b/index.html
@@ -19,36 +19,28 @@
     <div class="container">
  <!--conteudo-->
 <p style="color:green;">~principais capitulos: <br><br></p>
-
-
-
-<a  style="color:darkgray" href="cap1.html">cap 1: emoções primarias</a><br><br>
+<p  style="color:darkgray;opacity:2px;" href="cap1.html">cap 1: emoções primarias</p>
+<p style="color: rgb(121, 121, 121);">cap 2 emoções complexas</p>
 
 
 
 
 
-
- <p>este site é para informações sobre as emoções ainda em desenvolvimento</p>
- <br><p style="color: darkgray;text-align: center;">espere desenvolver a pagina 2 e 3</p>
+<br><br>
  <nav aria-label="Page navigation example">
    <ul class="pagination justify-content-center">
      <li class="page-item disabled">
       <a class="page-link">anterior</a>
     </li>
     <li class="page-item"><a class="page-link" href="cap1.html">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="pagina2.html">2</a></li>
     <li class="page-item"><a class="page-link" href="#">3</a></li>
     <li class="page-item">
       <a class="page-link" href="cap1.html">proximo</a>
     </li>
   </ul>
+  <br><br>
 </nav>
-<br><br><h3 class="centro">terá 3 capitulos:</h3><br><br>
-<h4 class="centro" style="color: darkcyan;">cap 1 : emoções simples</h4>
-<h4 class="centro" style="color: purple;">cap 2 : emoções complexas</h4>
-<h4 class="centro"> cap 4 : traumas</h4><br>
-<h3>todos esse capitulos ainda estão em desenvolvimento</h3>
 </div>
 
     <script
