--- a/pagina2.html
+++ b/pagina2.html
@@ -18,7 +18,18 @@
     <body>
         <nav><a  class="link" href="/"><p class="logo">emoções <img class="imagem"  src="Texto do seu parágrafo.ico"></p></a></nav>
         <div class="container">
-        <h3 class="emoçoes">pagina 2</h3>
+        <h4 class="emoçoes">pagina 2</h4>
+        <br>
+        <h2 style="color: purple;text-align: center;">medo</h4>
+            <p> Uma Emoção Universal <br>
+                O medo é uma resposta natural e instintiva ao perigo, incerteza ou ameaça. É uma emoção complexa que acompanha o ser humano desde a sua existência.
+                Causas do medo incluem experiências traumáticas, ameaças físicas ou emocionais e situações de incerteza. Essas situações podem gerar ansiedade, tensão e evitação.
+                Para superar o medo, é essencial:
+                Enfrentar e aceitar os sentimentos
+                Buscar apoio emocional
+                Desenvolver autoconfiança
+                Praticar técnicas de relaxamento</p> <br>
+                <h2 style="color: yellow; text-align: center;">Orgulho</h2>
           </div>
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
