adicionei por completo na pagina 2 o orgulho

--- a/pagina2.html
+++ b/pagina2.html
@@ -30,7 +30,21 @@
                 Desenvolver autoconfiança
                 Praticar técnicas de relaxamento</p> <br>
                 <h2 style="color: yellow; text-align: center;">Orgulho</h2>
-          </div>
+ <p class="centro">O Orgulho: Uma Emoção Dupla</p>
+ <p>O orgulho é uma emoção complexa que pode ser positiva ou negativa.
+</p>
+ <br><p>Aspectos Positivo: </p>
+    Autoestima e confiança <br>
+    Reconhecimento de conquistas <br>
+    Motivação para superar desafios
+    Inspiração para outros
+    </p>
+    <p>Aspectos Negativos <br>
+         Arrogância e presunção <br>
+         Dificuldade em admitir erros <br>
+         Desrespeito por outros <br>
+         Isolamento social <br><br>Um equilíbrio saudável entre orgulho e humildade é fundamental para construir relacionamentos fortes e alcançar sucesso duradouro.</p>
+            </div>
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
