adicionei a paginação na pagina 2

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
   </ul>
   <br><br>
 </nav>
+<p>foi adicionado a pagina 2!! vai lá conferir</p>
+<p style="color: darkgray;">v.2</p>
 </div>
 
     <script
