--- a/pagina2.html
+++ b/pagina2.html
@@ -44,6 +44,24 @@
          Dificuldade em admitir erros <br>
          Desrespeito por outros <br>
          Isolamento social <br><br>Um equilíbrio saudável entre orgulho e humildade é fundamental para construir relacionamentos fortes e alcançar sucesso duradouro.</p>
+         <p style="color: darkgray;">v.1</p>
+         <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                    <a class="page-link" href="index.html">anterior</a>
+                  </li>
+                  <li class="page-item"><a class="page-link" href="cap1.html">1</a></li>
+                  <li class="page-item active" aria-current="page">
+                    <span class="page-link">2</span>
+                </li>
+                <a class="page-link" href="#">3</a>
+              </li>
+              <li class="page-item">
+                <a class="page-link" href="#">proximo</a>
+              </li>
+            </ul>
+          </nav>
+          <p style="color: darkgray;">v.2</p>
             </div>
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
