--- a/cap1.html
+++ b/cap1.html
@@ -44,7 +44,7 @@
           <li class="page-item"><a class="page-link" href="pagina2.html">2</a></li>
           <li class="page-item"><a class="page-link" href="#">3</a></li>
           <li class="page-item">
-            <a class="page-link" href="#">proximo</a>
+            <a class="page-link" href="pagina2.html">proximo</a>
           </li>
         </ul>
       </nav>
