--- a/pagina2.html
+++ b/pagina2.html
@@ -48,7 +48,7 @@
          <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
                 <li class="page-item">
-                    <a class="page-link" href="index.html">anterior</a>
+                    <a class="page-link" href="cap1.html">anterior</a>
                   </li>
                   <li class="page-item"><a class="page-link" href="cap1.html">1</a></li>
                   <li class="page-item active" aria-current="page">
