arrumei alguns bugs 2

--- a/pagina2.html
+++ b/pagina2.html
@@ -15,7 +15,7 @@
             <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <nav><a  class="link" href="/"><p class="logo">emoções <img class="imagem"  src="Texto do seu parágrafo.ico"></p></a></nav>
+        <nav><a  class="link" href="index.html"><p class="logo">emoções <img class="imagem"  src="Texto do seu parágrafo.ico"></p></a></nav>
         <div class="container">
         <h4 class="emoçoes">pagina 2</h4>
         <br>
